fixed overflow

--- a/Expenses-chart-component app/nextapp/styles/style.scss
+++ b/Expenses-chart-component app/nextapp/styles/style.scss
@@ -13,7 +13,6 @@ body {
     min-height: 100vh;
     padding: 4em 1em;
     background-color: map-get(d.$color-bucket, "Cream");
-    overflow: hidden;
 }
 
 main {
